chat box styling

--- a/src/styles/components/_contacts.sass
+++ b/src/styles/components/_contacts.sass
@@ -1,6 +1,12 @@
 .contact
+  padding: 1rem
+  align-items: center !important
+  cursor: pointer
   &__content
-    margin-bottom: 2rem
+
+    &__name
+      margin-bottom: 0
+
     &__faded
-      color: #868686
+      color: $grey
       margin-bottom: 0
