--- a/src/styles/components/_sidebar.sass
+++ b/src/styles/components/_sidebar.sass
@@ -1,7 +1,11 @@
 .sidebar
+  flex: 35%
   &__user
     display: flex
     align-items: center
     justify-content: space-between
+    padding: 1rem
+    margin-bottom: 1rem
+    border-bottom: 1px solid $grey
     &__icon
       cursor: pointer
