--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,4 +1,7 @@
 @import base/_base
+@import base/_utilities
   
 @import components/_sidebar
 @import components/_contacts
+@import components/_chat-box
+@import components/_chat-page
