edit profile styling

--- a/src/styles/components/_chat-box.sass
+++ b/src/styles/components/_chat-box.sass
@@ -17,5 +17,5 @@
       background-color: white
       float: left
     &--sender
-      background-color: $green
+      background-color: $light-green
       float: right
