--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,7 +1,9 @@
 @import base/_base
 @import base/_utilities
   
+@import components/_buttons
 @import components/_sidebar
 @import components/_contacts
 @import components/_chat-box
 @import components/_chat-page
+@import components/_edit-profile
