--- a/src/styles/components/_edit-profile.sass
+++ b/src/styles/components/_edit-profile.sass
@@ -5,6 +5,10 @@
   width: 100%
   height: 100%
   background-color: $mid-grey
+  transform: translateX(-100%)
+  transition: transform .7s cubic-bezier(0.165, 0.84, 0.44, 1)
+  &.visible
+    transform: translateX(0%)
 
   &__header
     display: flex
