--- a/src/styles/base/_base.sass
+++ b/src/styles/base/_base.sass
@@ -1,5 +1,5 @@
 $grey: #868686
 $mid-grey: #ededed
-$light-grey: #f8f9fb
+$light-grey: #f4f5f8
 $green: #01bfa5
-$light-green: #dcf8c6
+$blue: #007bff
