--- a/src/styles/components/_chat-box.sass
+++ b/src/styles/components/_chat-box.sass
@@ -3,10 +3,9 @@
   display: flex
   flex-direction: column
   justify-content: flex-end
-  background-color: $light-grey
   height: 100%
   flex: 65%
-  border-left: 1px solid $grey
+  border-left: 1px solid $mid-grey
 
   &__header
     position: absolute
@@ -15,8 +14,9 @@
     width: 100%
     display: flex
     align-items: center
-    background-color: $mid-grey
+    background-color: $light-grey
     padding: 1rem
+    border-bottom: 1px solid $mid-grey
     &__name
       margin-left: 1rem
 
@@ -24,13 +24,14 @@
     padding: 0 1rem
 
   &__message
-    border-radius: 5px
-    box-shadow: 2px 2px 4px $grey
-    padding: .3rem
+    padding: .3rem .6rem
     clear: both
     &--receiver
-      background-color: white
+      background-color: $mid-grey
       float: left
+      border-radius: 5px 5px 5px 0
     &--sender
-      background-color: $light-green
+      background-color: $blue
+      color: white
       float: right
+      border-radius: 5px 5px 0 5px
