--- a/src/styles/components/_contacts.sass
+++ b/src/styles/components/_contacts.sass
@@ -2,6 +2,12 @@
   padding: 1rem
   align-items: center !important
   cursor: pointer
+  border-radius: 10px
+  margin: 1rem
+  transition: background-color .3s ease-out
+  @media (hover: hover)
+    &:hover
+      background-color: $light-grey
   &__content
 
     &__name
