--- a/src/styles/components/_sidebar.sass
+++ b/src/styles/components/_sidebar.sass
@@ -5,8 +5,8 @@
     display: flex
     align-items: center
     justify-content: space-between
-    padding: 1rem
+    padding: 1rem 2rem
     margin-bottom: 1rem
-    border-bottom: 1px solid $grey
+    border-bottom: 1px solid $mid-grey
     &__icon
       cursor: pointer
