--- a/src/styles/components/_chat-box.sass
+++ b/src/styles/components/_chat-box.sass
@@ -23,9 +23,19 @@
   &__send
     padding: 0 1rem
 
+    &__btn
+      width: 60px
+      height: 60px
+    
+    &__text
+      max-height: 60px
+      resize: none
+
   &__message
+    position: relative
     padding: .3rem .6rem
     clear: both
+    margin-bottom: 2rem
     &--receiver
       background-color: $mid-grey
       float: left
@@ -35,3 +45,10 @@
       color: white
       float: right
       border-radius: 5px 5px 0 5px
+
+    .time
+      position: absolute
+      bottom: -18px
+      right: 0
+      font-size: .75rem
+      color: $grey
