--- a/src/styles/base/_base.sass
+++ b/src/styles/base/_base.sass
@@ -3,3 +3,7 @@ $mid-grey: #ededed
 $light-grey: #f4f5f8
 $green: #01bfa5
 $blue: #007bff
+
+h3
+  @media screen and ( max-width: 1024px )
+    font-size: 1.2rem !important
