--- a/src/styles/components/_edit-profile.sass
+++ b/src/styles/components/_edit-profile.sass
@@ -13,9 +13,9 @@
   &__header
     display: flex
     align-items: center
-    background-color: $green
+    background-color: $blue
     color: white
-    padding-top: 2.5rem
+    padding-top: 3.05rem
 
   &__form
     display: flex
