--- a/src/styles/base/_utilities.sass
+++ b/src/styles/base/_utilities.sass
@@ -1,8 +1,2 @@
-.container
-  &--full
-    height: 100vh
-    width: 100vw
-    & > .row
-      height: 100%
-      & > .col
-        height: 100%
+body
+  overflow: hidden
