--- a/src/styles/components/_chat-box.sass
+++ b/src/styles/components/_chat-box.sass
@@ -67,7 +67,7 @@
     position: relative
     padding: .3rem .6rem
     margin-bottom: 2rem
-    width: 60%
+    max-width: 60%
     clear: both
     &--receiver
       background-color: $mid-grey
