last message styling

--- a/src/styles/components/_sidebar.sass
+++ b/src/styles/components/_sidebar.sass
@@ -1,10 +1,10 @@
 .sidebar
   position: relative
-  flex: 35%
+  width: 35%
   @media screen and ( max-width: 1024px )
-    flex: 40%
+    width: 40%
   @media screen and ( max-width: 769px )
-    flex: 100%
+    width: 100%
   &__user
     display: flex
     align-items: center
