--- a/src/styles/components/_contacts.sass
+++ b/src/styles/components/_contacts.sass
@@ -4,11 +4,13 @@
   cursor: pointer
   border-radius: 10px
   margin: 1rem
+  overflow: hidden
   transition: background-color .3s ease-out
   @media (hover: hover)
     &:hover
       background-color: $light-grey
   &__content
+    min-width: 0
 
     &__name
       margin-bottom: 0
@@ -16,3 +18,4 @@
     &__faded
       color: $grey
       margin-bottom: 0
+      white-space: nowrap
