--- a/src/styles/components/_chat-box.sass
+++ b/src/styles/components/_chat-box.sass
@@ -44,6 +44,7 @@
     background-color: $light-grey
     padding: 1rem
     border-bottom: 1px solid $mid-grey
+    z-index: 99
     &__name
       margin-left: 1rem
     &__back
@@ -55,6 +56,11 @@
   &__send
     padding: 0 1rem
 
+    &__messages
+      height: calc(100vh - 183px)
+      overflow-y: scroll
+      padding: 2rem 1rem 0 0
+
     &__btn
       width: 60px
       height: 60px
@@ -62,43 +68,3 @@
     &__text
       max-height: 60px
       resize: none
-
-  &__message
-    position: relative
-    padding: .3rem .6rem
-    margin-bottom: 2rem
-    max-width: 60%
-    clear: both
-    &--receiver
-      background-color: $mid-grey
-      float: left
-      border-radius: 5px 5px 5px 0
-      .chat-box__message__aside
-        svg
-          path
-            fill: black
-    &--sender
-      background-color: $blue
-      color: white
-      float: right
-      border-radius: 5px 5px 0 5px
-
-    .time
-      position: absolute
-      bottom: -18px
-      right: 0
-      font-size: .75rem
-      color: $grey
-
-    &__aside
-      position: absolute !important
-      top: 50%
-      right: 0
-      transform: translateY(-50%)
-      z-index: 999
-      .dropdown-toggle
-        padding: 0 !important
-        background: none !important
-        border: none !important
-        &::after
-          display: none !important
