login component styling

--- a/src/styles/components/_login.sass
+++ b/src/styles/components/_login.sass
@@ -1,6 +1,8 @@
 .login
   border: 1px solid $mid-grey
-  padding: 3rem
+  padding: 3rem 5rem
+  @media screen and ( max-width: 769px )
+    padding: 1.5rem 3rem
 
   &__title
     margin-bottom: 1rem
