chat page fixed

--- a/src/styles/components/_chat-box.sass
+++ b/src/styles/components/_chat-box.sass
@@ -8,7 +8,7 @@
   border-left: 1px solid $mid-grey
   background-color: white
   @media screen and ( max-width: 769px )
-    position: absolute
+    position: fixed
     top: 0
     left: 0
     width: 100%
