--- a/src/styles/components/_loader.sass
+++ b/src/styles/components/_loader.sass
@@ -1,5 +1,23 @@
+.loader-wrapper
+  display: flex
+  align-items: center
+  justify-content: center
+  width: 35%
+  @media screen and ( max-width: 1024px )
+    width: 40%
+  @media screen and ( max-width: 769px )
+    width: 100%
+  
 .loader
-  border: 16px solid black
-  border-top-color: blue
-  width: 120px
-  height: 120px
+  border: 7px solid black
+  border-top-color: $blue
+  width: 50px
+  height: 50px
+  border-radius: 50%
+  animation: spin 2s linear infinite
+
+@keyframes spin
+  0%
+    transform: rotate(0deg)
+  100%
+    transform: rotate(360deg)
