--- a/src/styles/components/_edit-profile.sass
+++ b/src/styles/components/_edit-profile.sass
@@ -2,13 +2,17 @@
   position: fixed
   top: 0
   left: 0
-  width: 100%
+  width: 35%
   height: 100%
   background-color: $mid-grey
   transform: translateX(-100%)
   transition: transform .7s cubic-bezier(0.165, 0.84, 0.44, 1)
   &.visible
     transform: translateX(0%)
+  @media screen and ( max-width: 1024px )
+    width: 40%
+  @media screen and ( max-width: 769px )
+    width: 100%
 
   &__header
     display: flex
