message break word

--- a/src/styles/components/_message.sass
+++ b/src/styles/components/_message.sass
@@ -23,7 +23,7 @@
   
   p
     margin-bottom: 0 !important
-    word-break: break-all
+    word-break: break-word
 
   .time
     position: absolute
