set active contact

--- a/src/styles/components/_contacts.sass
+++ b/src/styles/components/_contacts.sass
@@ -9,6 +9,9 @@
   @media (hover: hover)
     &:hover
       background-color: $light-grey
+  &.visible
+    background-color: $light-grey
+
   &__content
     min-width: 0
 
