edit profile cursor on image

--- a/src/styles/components/_edit-profile.sass
+++ b/src/styles/components/_edit-profile.sass
@@ -31,5 +31,7 @@
     &__image
       margin-bottom: 2rem
       img
+        position: relative
         display: block
         margin: 0 auto !important
+        cursor: pointer
