add new chat component

--- a/src/styles/components/_sidebar.sass
+++ b/src/styles/components/_sidebar.sass
@@ -9,9 +9,14 @@
     display: flex
     align-items: center
     justify-content: space-between
+    flex-wrap: wrap
     padding: 1rem 2rem
     margin-bottom: 1rem
     border-bottom: 1px solid $mid-grey
     &__icon
       cursor: pointer
       align-items: center !important
+      width: 40%
+    &__cta
+      & > .btn
+        margin-right: 1rem
