--- a/src/styles/components/_loader.sass
+++ b/src/styles/components/_loader.sass
@@ -3,13 +3,14 @@
   align-items: center
   justify-content: center
   width: 35%
+  margin: 0 auto
   @media screen and ( max-width: 1024px )
     width: 40%
   @media screen and ( max-width: 769px )
     width: 100%
   
 .loader
-  border: 7px solid black
+  border: 7px solid $light-grey
   border-top-color: $blue
   width: 50px
   height: 50px
