--- a/src/styles/components/_edit-profile.sass
+++ b/src/styles/components/_edit-profile.sass
@@ -29,9 +29,32 @@
     padding: 1rem
 
     &__image
+      position: relative
       margin-bottom: 2rem
+      cursor: pointer
+      @media (hover: hover)
+        &:hover
+          .overlay
+            opacity: 1
+      .overlay
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        position: absolute
+        top: 0
+        left: 50%
+        transform: translateX(-50%)
+        width: 200px
+        height: 200px
+        color: white
+        border-radius: 50%
+        background-color: transparentize(black, .6)
+        opacity: 0
+        transition: opacity .3s ease-out
+        will-change: opacity
+        pointer-events: none
       img
         position: relative
         display: block
         margin: 0 auto !important
-        cursor: pointer
