--- a/src/styles/components/_chat-box.sass
+++ b/src/styles/components/_chat-box.sass
@@ -60,11 +60,13 @@
       height: calc(100vh - 173px)
       overflow-y: scroll
       padding: 2rem 1rem 0 0
+      margin: 0 -1rem 0 0
 
     &__btn
       width: 60px
       height: 60px
     
-    &__text
-      max-height: 60px
-      resize: none
+    &__form
+      .form__message-input
+        max-height: 60px
+        resize: none
