--- a/src/styles/components/_login.sass
+++ b/src/styles/components/_login.sass
@@ -2,7 +2,10 @@
   border: 1px solid $mid-grey
   padding: 3rem 5rem
   @media screen and ( max-width: 769px )
-    padding: 1.5rem 3rem
+    padding: 2rem 4rem
+  @media screen and ( max-width: 375px )
+    width: 100%
+    padding: 1.5rem 2rem
 
   &__title
     margin-bottom: 1rem
