--- a/src/styles/components/_modal.sass
+++ b/src/styles/components/_modal.sass
@@ -1,6 +1,5 @@
 .modal-contact
-  display: flex
-  align-items: center
+  @include flex($align: center)
   padding: 1rem
   border-radius: 10px
   cursor: pointer
