--- a/src/styles/components/_buttons.sass
+++ b/src/styles/components/_buttons.sass
@@ -7,8 +7,6 @@
     height: 3rem
     svg
       position: absolute
-      top: 50%
-      left: 50%
-      transform: translate(-50%, -50%)
+      @include positionXY()
       path
         fill: white
