--- a/src/styles/components/_edit-profile.sass
+++ b/src/styles/components/_edit-profile.sass
@@ -15,16 +15,13 @@
     width: 100%
 
   &__header
-    display: flex
-    align-items: center
+    @include flex($align: center)
     background-color: $blue
     color: white
     padding-top: 3.05rem
 
   &__form
-    display: flex
-    flex-direction: column
-    justify-content: center
+    @include flex($direction: column, $justify: center)
     margin-top: 2rem
     padding: 1rem
 
@@ -37,14 +34,10 @@
           .overlay
             opacity: 1
       .overlay
-        display: flex
-        flex-direction: column
-        align-items: center
-        justify-content: center
+        @include flex($direction: column, $align: center, $justify: center)
         position: absolute
         top: 0
-        left: 50%
-        transform: translateX(-50%)
+        @include positionX()
         width: 200px
         height: 200px
         color: white
