--- a/src/styles/components/_message.sass
+++ b/src/styles/components/_message.sass
@@ -34,9 +34,8 @@
 
   &__aside
     position: absolute !important
-    top: 50%
     right: 0
-    transform: translateY(-50%)
+    @include positionY()
     z-index: 999
     .dropdown-toggle
       padding: 0 !important
