--- a/src/styles/components/_sidebar.sass
+++ b/src/styles/components/_sidebar.sass
@@ -6,9 +6,7 @@
   @media screen and ( max-width: 769px )
     width: 100%
   &__user
-    display: flex
-    align-items: center
-    justify-content: space-between
+    @include flex($align: center, $justify: space-between)
     flex-wrap: wrap
     padding: 1rem 2rem
     margin-bottom: 1rem
