--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,6 +1,9 @@
+// Base imports
 @import base/_base
 @import base/_utilities
-  
+@import base/_mixins
+
+// Components imports
 @import components/_buttons
 @import components/_sidebar
 @import components/_contacts
